--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,7 @@
+.invert {
+  filter: invert(1) hue-rotate(180deg)
+}
+
 td, th {
     vertical-align: middle !important;
     text-align: center !important
